samples/_failures_safe/1761636680_e7c8c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09427178.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_09427178.c:185:9: error: expected declaration or statement at end of input
  185 |         } else {
      |         ^
./samples/SAFE/__tmp_09427178.c:185:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09427178.c:185:9: error: expected declaration or statement at end of input
